// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUI ContentBlock and ContentBlockItem/> renders content block and content block item with automation id when qaHook prop is passed in 1`] = `
<div
  className="xui-contentblock"
  data-automationid="qaHook"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout"
    data-automationid="qaHook"
  />
</div>
`;

exports[`<XUI ContentBlock and ContentBlockItem/> renders content block item main content as anchor when onKeyDown prop is passed 1`] = `
<div
  className="xui-contentblockitem xui-contentblockitem-layout"
/>
`;

exports[`<XUI ContentBlock and ContentBlockItem/> renders content block item tag position description by default 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout xui-contentblockitem-rowlink xui-contentblockitem-has-top-radius xui-contentblockitem-has-bottom-radius"
  >
    <div
      className="xui-contentblockitem--leftcontent"
    >
      <abbr
        className="xui-avatar xui-avatar-color-2"
        role="presentation"
      >
        P
      </abbr>
    </div>
    <div
      className="xui-contentblockitem--maincontent"
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
        <span
          className="xui-contentblockitem--secondaryheading"
        >
          test secondary heading
        </span>
      </div>
      <div
        className="xui-contentblockitem--description"
      >
        <span
          className="xui-tag xui-tag-positive xui-margin-left-small"
        >
          Positive
        </span>
      </div>
    </div>
    <div
      className="xui-contentblockitem--rightcontent"
    >
      <div
        className="xui-contentblockitem--pinnedvalue"
      >
        0.00
      </div>
      <button
        aria-label="Overflow Menu"
        className="xui-button xui-button-icon-medium xui-button-icon"
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          className="xui-icon"
          focusable="false"
          height={13}
          viewBox="0 0 3 13"
          width={3}
        >
          <path
            d="M1.5 3a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0-5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
            role="presentation"
          />
        </svg>
        <div
          className="xui-touchtarget"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<XUI ContentBlock and ContentBlockItem/> renders content block item tag position inline 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout xui-contentblockitem-rowlink xui-contentblockitem-has-top-radius xui-contentblockitem-has-bottom-radius"
  >
    <div
      className="xui-contentblockitem--leftcontent"
    >
      <abbr
        className="xui-avatar xui-avatar-color-2"
        role="presentation"
      >
        P
      </abbr>
    </div>
    <div
      className="xui-contentblockitem--maincontent"
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
        <span
          className="xui-contentblockitem--secondaryheading"
        >
          test secondary heading
        </span>
        <span
          className="xui-tag xui-tag-positive xui-margin-left-small"
        >
          Positive
        </span>
      </div>
    </div>
    <div
      className="xui-contentblockitem--rightcontent"
    >
      <div
        className="xui-contentblockitem--pinnedvalue"
      >
        0.00
      </div>
      <button
        aria-label="Overflow Menu"
        className="xui-button xui-button-icon-medium xui-button-icon"
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          className="xui-icon"
          focusable="false"
          height={13}
          viewBox="0 0 3 13"
          width={3}
        >
          <path
            d="M1.5 3a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0-5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
            role="presentation"
          />
        </svg>
        <div
          className="xui-touchtarget"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<XUI ContentBlock and ContentBlockItem/> renders content block item tag position right 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout xui-contentblockitem-rowlink xui-contentblockitem-has-top-radius xui-contentblockitem-has-bottom-radius"
  >
    <div
      className="xui-contentblockitem--leftcontent"
    >
      <abbr
        className="xui-avatar xui-avatar-color-2"
        role="presentation"
      >
        P
      </abbr>
    </div>
    <a
      className="xui-contentblockitem--maincontent"
      href="#"
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
        <span
          className="xui-contentblockitem--secondaryheading"
        >
          test secondary heading
        </span>
      </div>
    </a>
    <div
      className="xui-contentblockitem--rightcontent"
    >
      <span
        className="xui-tag xui-tag-positive xui-margin-left-small"
      >
        Positive
      </span>
      <div
        className="xui-contentblockitem--pinnedvalue"
      >
        0.00
      </div>
      <button
        aria-label="Overflow Menu"
        className="xui-button xui-button-icon-medium xui-button-icon"
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          className="xui-icon"
          focusable="false"
          height={13}
          viewBox="0 0 3 13"
          width={3}
        >
          <path
            d="M1.5 3a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0-5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
            role="presentation"
          />
        </svg>
        <div
          className="xui-touchtarget"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<XUI ContentBlock and ContentBlockItem/> renders content block item with everything 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout xui-contentblockitem-rowlink xui-contentblockitem-has-top-radius xui-contentblockitem-has-bottom-radius"
  >
    <div
      className="xui-contentblockitem--leftcontent"
    >
      <abbr
        className="xui-avatar xui-avatar-color-2"
        role="presentation"
      >
        P
      </abbr>
    </div>
    <div
      className="xui-contentblockitem--maincontent"
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
        <span
          className="xui-contentblockitem--secondaryheading"
        >
          test secondary heading
        </span>
      </div>
      <div
        className="xui-contentblockitem--description"
      >
        <span
          className="xui-tag xui-tag-positive xui-margin-left-small"
        >
          Positive
        </span>
      </div>
    </div>
    <div
      className="xui-contentblockitem--rightcontent"
    >
      <div
        className="xui-contentblockitem--pinnedvalue"
      >
        0.00
      </div>
      <button
        aria-label="Overflow Menu"
        className="xui-button xui-button-icon-medium xui-button-icon"
        disabled={false}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          className="xui-icon"
          focusable="false"
          height={13}
          viewBox="0 0 3 13"
          width={3}
        >
          <path
            d="M1.5 3a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm0-5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
            role="presentation"
          />
        </svg>
        <div
          className="xui-touchtarget"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<XUI ContentBlock and ContentBlockItem/> renders content block with content block item child and headings 1`] = `
<div
  className="xui-contentblock"
>
  <div
    className="xui-contentblockitem xui-contentblockitem-layout"
  >
    <div
      className="xui-contentblockitem--maincontent"
    >
      <div
        className="xui-contentblockitem--headings"
      >
        <span
          className="xui-contentblockitem--primaryheading"
        >
          test primary heading
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<XUI ContentBlock and ContentBlockItem/> renders the base content block with no children 1`] = `
<div
  className="xui-contentblock"
/>
`;
